Multiversion and too much other stuff